textual changes and few colors updated

--- a/about-us.html
+++ b/about-us.html
@@ -108,7 +108,7 @@
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager"
                                   class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Lead Sense <div class="commin-soon">comming soon</div>
+                              <div>Lead Sense <div class="commin-soon">Coming Soon</div>
                               </div>
                             </div>
                             <div class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
@@ -116,7 +116,7 @@
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager"
                                   class="nav-menu-leaf-icon" />
                               </div>
-                              <div>CommandCore <div class="commin-soon">comming soon</div>
+                              <div>CommandCore <div class="commin-soon">Coming Soon</div>
                               </div>
                             </div>
                             <div class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
@@ -124,7 +124,7 @@
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager"
                                   class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Engagebot <div class="commin-soon">comming soon</div>
+                              <div>Engagebot <div class="commin-soon">Coming Soon</div>
                               </div>
                             </div>
                           </div>
@@ -211,7 +211,7 @@
            <div class="au-purpose-card">
             <div class="au-purpose__card-head">
                     <div class="au-purpose__icon">
-                      <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#714df0" stroke-width="1.5"
+                      <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#131335" stroke-width="1.5"
                         stroke-linecap="round" stroke-linejoin="round">
                         <circle cx="12" cy="12" r="10" />
                         <path d="M2 12h20" />
@@ -235,7 +235,7 @@
              <div class="au-purpose-card">
               <div class="au-purpose__card-head">
                 <div class="au-purpose__icon">
-                  <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#714df0" stroke-width="1.5"
+                  <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#131335" stroke-width="1.5"
                     stroke-linecap="round" stroke-linejoin="round">
                     <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
                     <polyline points="22 4 12 14.01 9 11.01" />
@@ -275,43 +275,43 @@
                   <div class="stat-card_top">
                     <div class="stat-number">
                       <div duration="2000" counter-element="number" class="heading-style-h1 au-stats__number"
-                        data-target="3.5" data-suffix="M" data-decimals="1">0</div>
+                        data-target="50" data-suffix="M+" data-decimals="1">0</div>
                     </div>
-                    <div class="eyebrow text-weight-bold">images weekly</div>
+                    <div class="eyebrow text-weight-bold">Conversations Processed</div>
                   </div>
-                  <div class="hide-mobile-landscape">Powerful AI tools generating millions of creative assets every week
+                  <div class="hide-mobile-landscape">Powerful AI platforms analyzing millions of business conversations every month
                   </div>
                 </div>
                 <div class="stat-card card-s">
                   <div class="stat-card_top">
                     <div class="stat-number">
                       <div duration="2000" counter-element="number" class="heading-style-h1 au-stats__number"
-                        data-target="100" data-suffix="+" data-decimals="0">0</div>
+                        data-target="200" data-suffix="+" data-decimals="0">0</div>
                     </div>
-                    <div class="eyebrow text-weight-bold">AI templates</div>
+                    <div class="eyebrow text-weight-bold">Enterprise Integrations</div>
                   </div>
-                  <div class="hide-mobile-landscape">Ready-to-use templates and inspiration resources for every project
+                  <div class="hide-mobile-landscape">Ready-to-use integrations and custom solutions for every platform
                   </div>
                 </div>
                 <div class="stat-card card-t">
                   <div class="stat-card_top">
                     <div class="stat-number">
                       <div duration="2000" counter-element="number" class="heading-style-h1 au-stats__number"
-                        data-target="120" data-suffix="+" data-decimals="0">0</div>
+                        data-target="100" data-suffix="+" data-decimals="0">0</div>
                     </div>
-                    <div class="eyebrow text-weight-bold">team members</div>
+                    <div class="eyebrow text-weight-bold">Team Members</div>
                   </div>
-                  <div class="hide-mobile-landscape">Talented professionals working across offices worldwide</div>
+                  <div class="hide-mobile-landscape">Talented engineers and product specialists working across global offices</div>
                 </div>
                 <div class="stat-card card-p">
                   <div class="stat-card_top">
                     <div class="stat-number">
                       <div duration="2000" counter-element="number" class="heading-style-h1 au-stats__number"
-                        data-target="500" data-suffix="K" data-decimals="0">0</div>
+                        data-target="10" data-suffix="M+" data-decimals="0">0</div>
                     </div>
-                    <div class="eyebrow text-weight-bold">edits monthly</div>
+                    <div class="eyebrow text-weight-bold">Automations Executed</div>
                   </div>
-                  <div class="hide-mobile-landscape">Creative edits completed every month by users around the globe
+                  <div class="hide-mobile-landscape">Business processes automated and optimized monthly by enterprises worldwide
                   </div>
                 </div>
               </div>
