--- a/index.html
+++ b/index.html
@@ -872,19 +872,19 @@
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Lead Sense <div class="commin-soon">comming soon</div></div>
+                              <div>Lead Sense <div class="commin-soon">Coming Soon</div></div>
                             </div><div
                               class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>CommandCore <div class="commin-soon">comming soon</div></div>
+                              <div>CommandCore <div class="commin-soon">Coming Soon</div></div>
                             </div><div
                               class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Engagebot <div class="commin-soon">comming soon</div></div>
+                              <div>Engagebot <div class="commin-soon">Coming Soon</div></div>
                             </div></div>
                         </div>
                       </div>
@@ -1025,7 +1025,7 @@
                         <img src="assets/hero_card_leaf.png" alt="CommandCore icon" loading="lazy" style="width: 100%; height: 100%; object-fit: contain;" />
                       </div>
                       <div class="text-size-medium text-weight-medium">CommandCore </div>
-                       <div class="commin-soon">comming soon</div>
+                       <div class="commin-soon">Coming Soon</div>
                     </div>
                     <div class="home-hero_pillar home-hero_pillar2">
                       <div class="home-hero_pillar_icon">
@@ -1038,14 +1038,14 @@
                         <img src="assets/hero_card_leaf.png" alt="Engagebot icon" loading="lazy" style="width: 100%; height: 100%; object-fit: contain;" />
                       </div>
                       <div class="text-size-medium text-weight-medium">Engagebot </div>
-                       <div class="commin-soon">comming soon</div>
+                       <div class="commin-soon">Coming Soon</div>
                     </div>
                     <div class="home-hero_pillar home-hero_pillar4 comming-prod">
                       <div class="home-hero_pillar_icon">
                         <img src="assets/hero_card_leaf.png" alt="Lead Sense icon" loading="lazy" style="width: 100%; height: 100%; object-fit: contain;" />
                       </div>
                       <div class="text-size-medium text-weight-medium">Lead Sense</div>
-                      <div class="commin-soon">comming soon</div>
+                      <div class="commin-soon">Coming Soon</div>
                     </div>
                   </div>
                 </div>
