--- a/pricing.html
+++ b/pricing.html
@@ -111,19 +111,19 @@
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Lead Sense <div class="commin-soon">comming soon</div></div>
+                              <div>Lead Sense <div class="commin-soon">Coming Soon</div></div>
                             </div><div
                               class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>CommandCore <div class="commin-soon">comming soon</div></div>
+                              <div>CommandCore <div class="commin-soon">Coming Soon</div></div>
                             </div><div
                               class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Engagebot <div class="commin-soon">comming soon</div></div>
+                              <div>Engagebot <div class="commin-soon">Coming Soon</div></div>
                             </div></div>
                         </div>
                       </div>
