--- a/product-detail.html
+++ b/product-detail.html
@@ -614,19 +614,19 @@
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Lead Sense <div class="commin-soon">comming soon</div></div>
+                              <div>Lead Sense <div class="commin-soon">Coming Soon</div></div>
                             </div><div
                               class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>CommandCore <div class="commin-soon">comming soon</div></div>
+                              <div>CommandCore <div class="commin-soon">Coming Soon</div></div>
                             </div><div
                               class="nav_dropdown_menu_link w-inline-block nav-coming-soon">
                               <div class="nav_dropdown_menu_link_icon">
                                 <img src="assets/hero_card_leaf.png" alt="" loading="eager" class="nav-menu-leaf-icon" />
                               </div>
-                              <div>Engagebot <div class="commin-soon">comming soon</div></div>
+                              <div>Engagebot <div class="commin-soon">Coming Soon</div></div>
                             </div></div>
                         </div>
                       </div>
@@ -702,7 +702,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="hero-trust-badges">
+                  <div class="hero-trust-badges d-none">
                     <div class="hero-trust-item"><span class="hero-trust-dot"></span>SOC 2 Type II</div>
                     <div class="hero-trust-item"><span class="hero-trust-dot"></span>HIPAA Compliant</div>
                     <div class="hero-trust-item"><span class="hero-trust-dot"></span>GDPR</div>
