--- a/index.html
+++ b/index.html
@@ -1804,157 +1804,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
 
-  <!-- Identity Stacking Scroll Animation -->
-  <script>
-    (function () {
-      if (typeof gsap === "undefined" || typeof ScrollTrigger === "undefined") return;
-      gsap.registerPlugin(ScrollTrigger);
-
-      var identityCards = gsap.utils.toArray(".vyro-identity__card");
-      if (identityCards.length) {
-        identityCards.forEach(function (card, i) {
-          if (i < identityCards.length - 1) {
-            gsap.to(card.querySelector(".container-large"), {
-              opacity: 0,
-              scale: 0.95,
-              ease: "none",
-              scrollTrigger: {
-                trigger: card,
-                start: "bottom bottom",
-                end: "bottom top",
-                scrub: 0.5,
-              },
-            });
-          }
-        });
-      }
-    })();
-  </script>
-
-  <!-- Spread Cards — Oval Spread Animation (pinned) -->
-  <script>
-    (function () {
-      if (typeof gsap === "undefined" || typeof ScrollTrigger === "undefined") return;
-      gsap.registerPlugin(ScrollTrigger);
-
-      var section = document.getElementById("spreadCards");
-      if (!section) return;
-
-      var stage = section.querySelector(".spread-cards__stage");
-      var cards = gsap.utils.toArray(".spread-cards__card");
-      var centerEl = section.querySelector(".spread-cards__center");
-      var orbEl = section.querySelector(".spread-cards__orb");
-      var ringInner = section.querySelector(".spread-cards__ring--inner");
-      var ringOuter = section.querySelector(".spread-cards__ring--outer");
-      if (!stage || !cards.length || !centerEl) return;
-
-      // Elliptical (oval) layout — wider horizontally, shorter vertically.
-      // Fixed pixel radii guarantee all cards stay within the viewport.
-      function getLayout() {
-        var w = window.innerWidth;
-        var rx, ry; // outer ellipse radii
-
-        if (w <= 576) {
-          rx = 150;  ry = 120;
-        } else if (w <= 991) {
-          rx = 250;  ry = 190;
-        } else {
-          rx = 320;  ry = 240;
-        }
-
-        // 8 cards distributed organically around the oval.
-        // All on the same ellipse for a clean oval shape.
-        // Angles in degrees (0° = right, -90° = top, 90° = bottom, 180° = left)
-        return [
-          { angle: -120, rx: rx, ry: ry },   // card 0 (lg)  — top-left
-          { angle: -75,  rx: rx, ry: ry },   // card 1 (sm)  — top
-          { angle: -25,  rx: rx, ry: ry },   // card 2 (md)  — top-right
-          { angle: 20,   rx: rx, ry: ry },   // card 3 (lg)  — right
-          { angle: 65,   rx: rx, ry: ry },   // card 4 (md)  — bottom-right
-          { angle: 110,  rx: rx, ry: ry },   // card 5 (sm)  — bottom
-          { angle: 155,  rx: rx, ry: ry },   // card 6 (lg)  — bottom-left
-          { angle: -165, rx: rx, ry: ry },   // card 7 (md)  — left
-        ];
-      }
-
-      // Initial state: all stacked in center
-      cards.forEach(function (card, i) {
-        gsap.set(card, {
-          x: 0, y: 0,
-          rotation: (i - 4) * 5,
-          scale: 0.6,
-          opacity: 0.85,
-        });
-      });
-
-      gsap.set(centerEl, { opacity: 0, scale: 0.8 });
-      if (orbEl) gsap.set(orbEl, { opacity: 0, scale: 0.4 });
-      if (ringInner) gsap.set(ringInner, { opacity: 0, scale: 0.5 });
-      if (ringOuter) gsap.set(ringOuter, { opacity: 0, scale: 0.5 });
-
-      var layout = getLayout();
-
-      // Build pinned timeline
-      var tl = gsap.timeline({
-        scrollTrigger: {
-          trigger: section,
-          start: "top top",
-          end: "+=150%",
-          pin: stage,
-          pinSpacing: true,
-          scrub: 0.8,
-          anticipatePin: 1,
-        },
-      });
-
-      // Phase 1: Rings fade in
-      if (ringInner) tl.to(ringInner, { opacity: 1, scale: 1, duration: 0.45, ease: "power2.out" }, 0);
-      if (ringOuter) tl.to(ringOuter, { opacity: 1, scale: 1, duration: 0.5, ease: "power2.out" }, 0.05);
-
-      // Phase 2: Cards spread along elliptical paths
-      cards.forEach(function (card, i) {
-        var pos = layout[i];
-        var rad = (pos.angle * Math.PI) / 180;
-
-        tl.to(card, {
-          x: pos.rx * Math.cos(rad),
-          y: pos.ry * Math.sin(rad),
-          rotation: 0,
-          scale: 1,
-          opacity: 1,
-          duration: 0.6,
-          ease: "power3.out",
-        }, 0);
-      });
-
-      // Phase 3: Orb and center text
-      if (orbEl) tl.to(orbEl, { opacity: 1, scale: 1, duration: 0.35, ease: "power2.out" }, 0.1);
-      tl.to(centerEl, { opacity: 1, scale: 1, duration: 0.4, ease: "power2.out" }, 0.15);
-
-      // Phase 4: Gentle drift outward
-      cards.forEach(function (card, i) {
-        var pos = layout[i];
-        var rad = (pos.angle * Math.PI) / 180;
-
-        tl.to(card, {
-          x: (pos.rx + 8) * Math.cos(rad),
-          y: (pos.ry + 8) * Math.sin(rad),
-          duration: 0.15,
-          ease: "none",
-        }, 0.6);
-      });
-
-      // Phase 5: Hold
-      tl.to({}, { duration: 0.25 });
-
-      // Resize
-      var resizeTimer;
-      window.addEventListener("resize", function () {
-        clearTimeout(resizeTimer);
-        resizeTimer = setTimeout(function () { ScrollTrigger.refresh(); }, 250);
-      });
-    })();
-  </script>
+  <script src="/gsap-anim.js"></script>
 </body>
 
 </html>
