--- a/about-us.html
+++ b/about-us.html
@@ -83,10 +83,8 @@
                                     d="M19.1441 9.6109C19.3529 9.8198 19.3529 10.1585 19.1441 10.3674L14.2876 15.2238C14.0787 15.4327 13.74 15.4327 13.5311 15.2238L13.1494 14.842C12.9405 14.6332 12.9405 14.2945 13.1494 14.0856L16.434 10.8009H1.01245C0.717027 10.8009 0.477539 10.5614 0.477539 10.266V9.71228C0.477539 9.41686 0.717027 9.17737 1.01245 9.17737H16.434L13.1494 5.89272C12.9405 5.68382 12.9405 5.34513 13.1494 5.13624L13.5311 4.75446C13.74 4.54556 14.0787 4.54556 14.2876 4.75446L19.1441 9.6109Z"
                                     fill="white" />
                                 </svg></div>
-                            </div><img
-                              src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68acc375d40fa35b494462ef_7c7fda845ae21c9aca6fce08a8ec8121_platform-graphics.webp"
-                              loading="eager" width="210" height="166" alt="Platform Graphics"
-                              class="platform_card_image" />
+                            </div>
+                            <p class="platform_card_description">Analyzes 100% of call recordings to generate accurate transcripts, sentiment analysis, compliance alerts, and risk indicators automatically.</p>
                           </a></div>
                         <div class="nav_dropdown_menu_links">
                           <div class="nav_dropdown_menu_links_col"><a href="product-detail.html"
@@ -184,7 +182,7 @@
               different forms — giving them a chance to discover hidden talents and share their emotions with
               enterprise-grade technology.</p>
             <div class="au-hero__cta">
-              <a href="contact.html" class="button is-purple w-inline-block">
+              <a href="#" class="button is-purple w-inline-block">
                 <div class="button_bg is-purple"></div>
                 <div class="button_content">
                   <div>Get In Touch</div>
@@ -491,7 +489,7 @@
                 <h3 class="heading-style-h4">Islamabad</h3>
                 <p class="text-size-medium" style="color: rgba(255,255,255,0.6);">Plot 349 Street 1, I-9/3 I 9/3 I-9,
                   Islamabad, 44000</p>
-                <a href="contact.html" class="button is-secondary w-inline-block" style="margin-top: 1rem;">
+                <a href="#" class="button is-secondary w-inline-block" style="margin-top: 1rem;">
                   <div class="button_content">
                     <div>Visit Us</div>
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -667,7 +665,7 @@
             <p class="text-size-large au-cta__desc">Be part of a mission-driven team building the future of AI. We're
               always looking for passionate minds.</p>
             <div class="au-cta__buttons">
-              <a href="contact.html" class="button is-purple w-inline-block">
+              <a href="#" class="button is-purple w-inline-block">
                 <div class="button_bg is-purple"></div>
                 <div class="button_content">
                   <div>Join Us</div>
@@ -678,7 +676,7 @@
                   </svg>
                 </div>
               </a>
-              <a href="contact.html" class="button is-secondary w-inline-block">
+              <a href="#" class="button is-secondary w-inline-block">
                 <div class="button_content">
                   <div>Connect</div>
                   <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -699,19 +697,25 @@
     <footer class="au-footer" data-theme="dark">
       <div class="container-large">
         <div class="au-footer__top">
-          <a href="index.html" class="au-footer__brand">
-            <img src="assets/header-logo.png" alt="Tech Excellence logo" loading="lazy"
-              style="height: 40px; width: auto;" />
-          </a>
+          <div class="au-footer__brand-col">
+            <a href="index.html" class="au-footer__brand">
+              <img src="assets/header-logo.png" alt="Tech Excellence logo" loading="lazy"
+                style="height: 54px; width: auto;" />
+            </a>
+            <div class="au-footer__info">
+              <p>Plot 349 &amp; 350, Street 01, i-9/3 Islamabad<br>Capital Territory, 44000.</p>
+              <p><a href="tel:+92518356733">HR: +92 51 835-6733</a></p>
+              <p><a href="mailto:info@saufik.com">info@saufik.com</a></p>
+            </div>
+          </div>
           <div class="au-footer__cols">
             <div class="au-footer__col">
-              <div class="eyebrow text-weight-bold" style="color: var(--color-secondary);">Company</div>
+              <div class="eyebrow text-weight-bold" style="color: var(--color-secondary);">Useful Links</div>
               <div class="au-footer__links">
                 <a href="index.html" class="au-footer__link">Home</a>
                 <a href="about-us.html" class="au-footer__link">About</a>
-                <a href="convoSense.html" class="au-footer__link">Products</a>
+                <a href="product-detail.html" class="au-footer__link">Products</a>
                 <a href="pricing.html" class="au-footer__link">Pricing</a>
-                <a href="contact.html" class="au-footer__link">Contact Us</a>
               </div>
             </div>
             <div class="au-footer__col">
@@ -732,6 +736,7 @@
                       d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19.1c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.43z" />
                     <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02" fill="currentColor" stroke="none" />
                   </svg>
+                  <span>YouTube</span>
                 </a>
                 <a href="#" class="au-footer__social-link" aria-label="LinkedIn">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -740,6 +745,7 @@
                     <rect x="2" y="9" width="4" height="12" />
                     <circle cx="4" cy="4" r="2" />
                   </svg>
+                  <span>LinkedIn</span>
                 </a>
                 <a href="#" class="au-footer__social-link" aria-label="Instagram">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -748,6 +754,7 @@
                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
                   </svg>
+                  <span>Instagram</span>
                 </a>
               </div>
             </div>
@@ -756,7 +763,7 @@
         <div class="au-footer__bottom">
           <div class="au-footer__divider"></div>
           <div class="au-footer__bottom-row">
-            <p class="text-size-small text-weight-medium" style="color: rgba(255,255,255,0.4);">&copy; 2025 Tech
+            <p class="text-size-small text-weight-medium" style="color: rgb(255 255 255 / 82%);">&copy; 2026 Tech
               Excellence. All rights reserved.</p>
           </div>
         </div>
