--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Nyxo Pricing - Fair & Transparent</title>
+  <title>The Tech Excellence Pricing - Fair & Transparent</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="icon" type="image/x-icon" href="assets/Favicon/favicon.ico" />
   <link rel="icon" type="image/png" sizes="32x32" href="assets/Favicon/favicon-32x32.png" />
@@ -88,10 +88,8 @@
                                     d="M19.1441 9.6109C19.3529 9.8198 19.3529 10.1585 19.1441 10.3674L14.2876 15.2238C14.0787 15.4327 13.74 15.4327 13.5311 15.2238L13.1494 14.842C12.9405 14.6332 12.9405 14.2945 13.1494 14.0856L16.434 10.8009H1.01245C0.717027 10.8009 0.477539 10.5614 0.477539 10.266V9.71228C0.477539 9.41686 0.717027 9.17737 1.01245 9.17737H16.434L13.1494 5.89272C12.9405 5.68382 12.9405 5.34513 13.1494 5.13624L13.5311 4.75446C13.74 4.54556 14.0787 4.54556 14.2876 4.75446L19.1441 9.6109Z"
                                     fill="white" />
                                 </svg></div>
-                            </div><img
-                              src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68acc375d40fa35b494462ef_7c7fda845ae21c9aca6fce08a8ec8121_platform-graphics.webp"
-                              loading="eager" width="210" height="166" alt="Platform Graphics"
-                              class="platform_card_image" />
+                            </div>
+                            <p class="platform_card_description">Analyzes 100% of call recordings to generate accurate transcripts, sentiment analysis, compliance alerts, and risk indicators automatically.</p>
                           </a></div>
                         <div class="nav_dropdown_menu_links">
                           <div class="nav_dropdown_menu_links_col"><a href="product-detail.html"
@@ -192,7 +190,7 @@
                   <div class="pricing-card_content_top">
                     <div class="text-block is-gap-10">
                       <h2 class="heading-style-h5 text-color-secondary">Free Forever</h2>
-                      <div class="text-size-regular">Complete access to <span class="text-weight-semibold">all Nyxo AI
+                      <div class="text-size-regular">Complete access to <span class="text-weight-semibold">all The Tech Excellence AI
                           products</span> and APIs with generous monthly limits.</div>
                     </div>
                     <div class="pricing-card_value-wrapper">
@@ -220,7 +218,7 @@
                               fill="#7C26D1" />
                           </svg></div>
                       </div>
-                      <div class="text-size-regular text-weight-medium">Complete access to all Nyxo AI products and APIs
+                      <div class="text-size-regular text-weight-medium">Complete access to all The Tech Excellence AI products and APIs
                       </div>
                     </div>
                     <div class="pricing-card_list_item">
@@ -408,6 +406,74 @@
         </div>
       </section>
 
+      <!-- HOW OUR PRICING WORKS -->
+      <section class="pricing-clarity">
+        <div class="container-large">
+          <div class="clarity-intro">
+            <h2 class="heading-style-h2">How Our Pricing Works</h2>
+            <p class="text-size-large">Three simple components. Choose what you need.</p>
+          </div>
+          <div class="clarity-container">
+            <div class="clarity-box included">
+              <div class="clarity-icon">
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
+                  <rect x="4" y="6" width="24" height="20" rx="2" stroke="currentColor" stroke-width="2"/>
+                  <path d="M4 10H28" stroke="currentColor" stroke-width="2"/>
+                  <path d="M8 14H14" stroke="currentColor" stroke-width="2"/>
+                  <path d="M8 19H20" stroke="currentColor" stroke-width="2"/>
+                </svg>
+              </div>
+              <h3>Included in Every Plan</h3>
+              <p class="clarity-subtitle">Core Features (No Extra Cost)</p>
+              <ul class="clarity-list">
+                <li>Full Transcription</li>
+                <li>AI Insights &amp; Summaries</li>
+                <li>Call Metadata</li>
+                <li>API Access</li>
+              </ul>
+              <p class="clarity-footer">Comes standard with Free &amp; Pay as You Go</p>
+            </div>
+            <div class="clarity-box addons">
+              <div class="clarity-icon">
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
+                  <circle cx="16" cy="16" r="12" stroke="currentColor" stroke-width="2"/>
+                  <path d="M16 10V22" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M10 16H22" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+              </div>
+              <h3>Optional Add-Ons</h3>
+              <p class="clarity-subtitle">Pay Only for What You Use</p>
+              <ul class="clarity-list">
+                <li>Profanity Filtering</li>
+                <li>PII Redaction</li>
+                <li>Jojo Analytics</li>
+                <li>More Features</li>
+              </ul>
+              <p class="clarity-footer">Each add-on billed separately hourly</p>
+            </div>
+            <div class="clarity-box ai">
+              <div class="clarity-icon">
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
+                  <circle cx="10" cy="10" r="4" stroke="currentColor" stroke-width="2"/>
+                  <circle cx="22" cy="10" r="4" stroke="currentColor" stroke-width="2"/>
+                  <path d="M10 14V20C10 22.2 11.8 24 14 24H18C20.2 24 22 22.2 22 20V14" stroke="currentColor" stroke-width="2"/>
+                  <path d="M12 18H20" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                </svg>
+              </div>
+              <h3>AI Chat &amp; Analytics</h3>
+              <p class="clarity-subtitle">Separate Service &middot; Credits Only</p>
+              <ul class="clarity-list">
+                <li>Ask Complex Questions</li>
+                <li>Custom Analytics</li>
+                <li>Insights on Demand</li>
+                <li>Flexible Credits</li>
+              </ul>
+              <p class="clarity-footer">Independent feature using credit system</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- PRODUCT PRICING TABLES (TABBED) -->
       <!-- ADD-ON SERVICES TABLE -->
       <section class="section background-gradient-pink-light">
@@ -511,7 +577,7 @@
                 Example: "How many people shared their SSN in these recordings?"
               </div>
               <p style="margin-top: 1rem; font-size: .8125rem; color: rgba(255,255,255,0.5);">
-                <strong style="color: var(--brand--coral);">Important:</strong> AI Chat &amp; Analytics is completely separate from your transcription service.
+                <strong style="color: #3dfd98;">Important:</strong> AI Chat &amp; Analytics is completely separate from your transcription service.
                 Use credits ONLY for this advanced intelligence feature.
               </p>
             </div>
@@ -533,7 +599,7 @@
               <div class="text-block">
                 <h2 class="heading-style-h3">Enterprise security and compliance</h2>
                 <div class="text-wrapper is-default-header">
-                  <div class="text-size-large">Nyxo maintains the highest standards of data protection. All data is
+                  <div class="text-size-large">The Tech Excellence maintains the highest standards of data protection. All data is
                     encrypted at rest and in transit with full audit trails.</div>
                 </div>
               </div>
@@ -548,7 +614,7 @@
                 <div class="eyebrow text-weight-bold text-color-primary">PCI DSS</div>
               </div>
               <div class="security-cell">
-                <div class="security-cell_icon">&#10003;</div>
+                <div class="security-cell_icon">&#9989;</div>
                 <div class="eyebrow text-weight-bold text-color-primary">SOC 2 Type II</div>
               </div>
               <div class="security-cell">
@@ -583,7 +649,7 @@
                   <div class="text-block">
                     <h2 class="heading-style-h3">Ready to transform your business with AI?</h2>
                     <div class="text-wrapper is-default-header">
-                      <div class="text-size-large">Join thousands of companies using Nyxo to automate operations,
+                      <div class="text-size-large">Join thousands of companies using The Tech Excellence to automate operations,
                         understand customers, and scale faster.</div>
                     </div>
                   </div>
@@ -613,19 +679,25 @@
     <footer class="au-footer" data-theme="dark">
       <div class="container-large">
         <div class="au-footer__top">
-          <a href="index.html" class="au-footer__brand">
-            <img src="assets/header-logo.png" alt="Tech Excellence logo" loading="lazy"
-              style="height: 40px; width: auto;" />
-          </a>
+          <div class="au-footer__brand-col">
+            <a href="index.html" class="au-footer__brand">
+              <img src="assets/header-logo.png" alt="Tech Excellence logo" loading="lazy"
+                style="height: 54px; width: auto;" />
+            </a>
+            <div class="au-footer__info">
+              <p>Plot 349 &amp; 350, Street 01, i-9/3 Islamabad<br>Capital Territory, 44000.</p>
+              <p><a href="tel:+92518356733">HR: +92 51 835-6733</a></p>
+              <p><a href="mailto:info@saufik.com">info@saufik.com</a></p>
+            </div>
+          </div>
           <div class="au-footer__cols">
             <div class="au-footer__col">
-              <div class="eyebrow text-weight-bold" style="color: var(--color-secondary);">Company</div>
+              <div class="eyebrow text-weight-bold" style="color: var(--color-secondary);">Useful Links</div>
               <div class="au-footer__links">
                 <a href="index.html" class="au-footer__link">Home</a>
                 <a href="about-us.html" class="au-footer__link">About</a>
-                <a href="convoSense.html" class="au-footer__link">Products</a>
+                <a href="product-detail.html" class="au-footer__link">Products</a>
                 <a href="pricing.html" class="au-footer__link">Pricing</a>
-                <a href="contact.html" class="au-footer__link">Contact Us</a>
               </div>
             </div>
             <div class="au-footer__col">
@@ -646,6 +718,7 @@
                       d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19.1c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.43z" />
                     <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02" fill="currentColor" stroke="none" />
                   </svg>
+                  <span>YouTube</span>
                 </a>
                 <a href="#" class="au-footer__social-link" aria-label="LinkedIn">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -654,6 +727,7 @@
                     <rect x="2" y="9" width="4" height="12" />
                     <circle cx="4" cy="4" r="2" />
                   </svg>
+                  <span>LinkedIn</span>
                 </a>
                 <a href="#" class="au-footer__social-link" aria-label="Instagram">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -662,6 +736,7 @@
                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
                   </svg>
+                  <span>Instagram</span>
                 </a>
               </div>
             </div>
@@ -670,7 +745,7 @@
         <div class="au-footer__bottom">
           <div class="au-footer__divider"></div>
           <div class="au-footer__bottom-row">
-            <p class="text-size-small text-weight-medium" style="color: rgba(255,255,255,0.4);">&copy; 2025 Tech
+            <p class="text-size-small text-weight-medium" style="color: rgb(255 255 255 / 82%);">&copy; 2026 Tech
               Excellence. All rights reserved.</p>
           </div>
         </div>
