--- a/product-detail.html
+++ b/product-detail.html
@@ -4,7 +4,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Digital Employee Experience Platform | Fringe</title>
+  <title>ConvoSense, Upload Calls. Get Intelligence Instantly | TechExcellence</title>
+
 
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
