--- a/index.html
+++ b/index.html
@@ -4,23 +4,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Tech Excellence: The Employee Experience Platform | Lifestyle Benefits, Wellbeing &amp; More</title>
-  <meta
-    content="With 120+ vendors, Tech Excellence offers an employee lifestyle benefits experience that builds loyalty, productivity, and well-being."
-    name="description" />
-  <meta content="Tech Excellence: The Employee Experience Platform | Lifestyle Benefits, Wellbeing &amp; More"
-    property="og:title" />
-  <meta
-    content="With 120+ vendors, Tech Excellence offers an employee lifestyle benefits experience that builds loyalty, productivity, and well-being."
-    property="og:description" />
-  <meta content="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68f1714c6a2babc270a97027_Open%20Graph.png"
-    property="og:image" />
-  <meta content="Tech Excellence: The Employee Experience Platform | Lifestyle Benefits, Wellbeing &amp; More"
-    property="twitter:title" />
-  <meta
-    content="With 120+ vendors, Tech Excellence offers an employee lifestyle benefits experience that builds loyalty, productivity, and well-being."
-    property="twitter:description" />
-  <meta property="og:type" content="website" />
+  <title>Tech Excellence: delivers intelligent AI agents that automate workflows | connect systems, and take action across your entire business with enterprise-grade security.</title>
+
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="icon" type="image/x-icon" href="assets/Favicon/favicon.ico" />
