--- a/pricing.html
+++ b/pricing.html
@@ -586,6 +586,74 @@
         </div>
       </section>
 
+      <!-- CREDIT PACKS SECTION -->
+      <section class="section credits-section-light">
+        <div class="container-large">
+          <div class="default-wrapper">
+            <div class="default-header-w">
+              <div class="" style="display: flex; justify-content: center; margin-bottom: 12px;">
+                <div class="border-gradient" style="width: fit-content;">
+                  <div>credit packs</div>
+                </div>
+              </div>
+              <div class="text-block">
+                <h2 class="heading-style-h3" style="text-align: center; margin-bottom: 0; color: #131335;">Choose Your Credit Pack</h2>
+                <div class="text-wrapper is-default-header">
+                  <div class="text-size-large" style="color: #131335;">Purchase credits for AI Chat &amp; Analytics. Use them at your own pace — credits never expire.</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="credits-grid">
+              <!-- Starter Credit Pack -->
+              <div class="credit-card">
+                <div class="credit-icon"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"><rect x="4" y="6" width="24" height="20" rx="2" stroke="currentColor" stroke-width="2"/><path d="M4 10H28" stroke="currentColor" stroke-width="2"/><path d="M8 14H14" stroke="currentColor" stroke-width="2"/><path d="M8 19H20" stroke="currentColor" stroke-width="2"/></svg></div>
+                <div class="credit-name">Starter</div>
+                <div class="credit-description">Perfect for getting started</div>
+                <div class="credit-price">1,000</div>
+                <div class="credit-price-note">credits = $1.00</div>
+                <button class="credit-cta">Get Started</button>
+                <ul class="credit-benefits">
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>~1,000 analytics queries</li>
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>No expiration</li>
+                </ul>
+              </div>
+
+              <!-- Professional Credit Pack -->
+              <div class="credit-card">
+                <div class="credit-icon"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"><circle cx="16" cy="16" r="12" stroke="currentColor" stroke-width="2"/><path d="M16 10V22" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M10 16H22" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg></div>
+                <div class="credit-name">Professional</div>
+                <div class="credit-description">For regular analytics use</div>
+                <div class="credit-price">10,000</div>
+                <div class="credit-price-note">credits = $9.50 (5% off)</div>
+                <button class="credit-cta is-primary">Most Popular</button>
+                <ul class="credit-benefits">
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>~10,000 analytics queries</li>
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>Bulk savings included</li>
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>No expiration</li>
+                </ul>
+              </div>
+
+              <!-- Enterprise Credit Pack -->
+              <div class="credit-card">
+                <div class="credit-icon"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"><circle cx="10" cy="10" r="4" stroke="currentColor" stroke-width="2"/><circle cx="22" cy="10" r="4" stroke="currentColor" stroke-width="2"/><path d="M10 14V20C10 22.2 11.8 24 14 24H18C20.2 24 22 22.2 22 20V14" stroke="currentColor" stroke-width="2"/><path d="M12 18H20" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg></div>
+                <div class="credit-name">Enterprise</div>
+                <div class="credit-description">Maximum value &amp; flexibility</div>
+                <div class="credit-price">100,000</div>
+                <div class="credit-price-note">credits = $90.00 (10% off)</div>
+                <button class="credit-cta">Contact Sales</button>
+                <ul class="credit-benefits">
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>~100,000 analytics queries</li>
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>Best value pricing</li>
+                  <li><span class="credit-benefits_icon"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none"><path d="M7.499 11.6895L5.427 9.61747C5.20733 9.3978 4.85117 9.3978 4.6315 9.61747L4.3665 9.88248C4.14683 10.1021 4.14683 10.4583 4.3665 10.678L7.10125 13.4127C7.32092 13.6324 7.67708 13.6324 7.89675 13.4127L14.3815 6.92797C14.6012 6.7083 14.6012 6.35215 14.3815 6.13248L14.1165 5.86747C13.8968 5.6478 13.5407 5.6478 13.321 5.86747L7.499 11.6895Z" fill="#fff"/></svg></span>Priority support</li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
       <!-- SECURITY SECTION -->
       <section data-theme="light" class="section background-gradient-pink-light">
         <div class="container-large">
