product images updated

--- a/product-detail.html
+++ b/product-detail.html
@@ -807,10 +807,8 @@
               <div class="platform-sticky-wrap is-1">
                 <div class="how_it-works-big-card">
                   <div id="w-node-_2f97fe00-10fe-513f-be52-ba8fe3248cde-6aa39a24" class="div-block"><img
-                      src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc6de54dd813c9d2f0_img1.avif"
+                      src="/assets/product-img-1.png"
                       loading="lazy" id="w-node-feb05d51-33ab-f2df-b919-08f46aa39a25-6aa39a24"
-                      alt="Purple image calendar" sizes="(max-width: 1104px) 100vw, 1104px"
-                      srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc6de54dd813c9d2f0_img1-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc6de54dd813c9d2f0_img1-p-800.avif 800w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc6de54dd813c9d2f0_img1-p-1080.avif 1080w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc6de54dd813c9d2f0_img1.avif 1104w"
                       class="how-it-works-big_image" />
                     <div id="w-node-feb05d51-33ab-f2df-b919-08f46aa39a26-6aa39a24" class="how-it-works-text_wrap">
                       <div class="how-it-works--big-card_number">1</div>
@@ -825,10 +823,9 @@
               <div class="platform-sticky-wrap is-2">
                 <div class="how_it-works-big-card">
                   <div id="w-node-_2f97fe00-10fe-513f-be52-ba8fe3248cde-6aa39a24" class="div-block"><img
-                      src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ef892bf49a30f5afcca171_new.webp"
+                      src="/assets/product-img-2.png"
                       loading="lazy" id="w-node-feb05d51-33ab-f2df-b919-08f46aa39a25-6aa39a24"
                       alt="Purple image calendar" sizes="(max-width: 1104px) 100vw, 1104px"
-                      srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ef892bf49a30f5afcca171_new-p-500.webp 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ef892bf49a30f5afcca171_new-p-800.webp 800w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ef892bf49a30f5afcca171_new-p-1080.webp 1080w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68ef892bf49a30f5afcca171_new.webp 1104w"
                       class="how-it-works-big_image" />
                     <div id="w-node-feb05d51-33ab-f2df-b919-08f46aa39a26-6aa39a24" class="how-it-works-text_wrap">
                       <div class="how-it-works--big-card_number">2</div>
@@ -844,10 +841,8 @@
               <div class="platform-sticky-wrap is-3">
                 <div class="how_it-works-big-card">
                   <div id="w-node-_2f97fe00-10fe-513f-be52-ba8fe3248cde-6aa39a24" class="div-block"><img
-                      src="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc181139127034e4e3_img3.avif"
-                      loading="lazy" id="w-node-feb05d51-33ab-f2df-b919-08f46aa39a25-6aa39a24" alt="Purple image graph"
-                      sizes="(max-width: 1104px) 100vw, 1104px"
-                      srcset="https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc181139127034e4e3_img3-p-500.avif 500w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc181139127034e4e3_img3-p-800.avif 800w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc181139127034e4e3_img3-p-1080.avif 1080w, https://cdn.prod.website-files.com/68a4b6b633b9c80467497ccc/68e824fc181139127034e4e3_img3.avif 1104w"
+                      src="/assets/product-img-1.png"
+                      loading="lazy" id="w-node-feb05d51-33ab-f2df-b919-08f46aa39a25-6aa39a24"
                       class="how-it-works-big_image" />
                     <div id="w-node-feb05d51-33ab-f2df-b919-08f46aa39a26-6aa39a24" class="how-it-works-text_wrap">
                       <div class="how-it-works--big-card_number">3</div>
