color and footer changes

--- a/product-detail.html
+++ b/product-detail.html
@@ -1196,8 +1196,6 @@
             </a>
             <div class="au-footer__info">
               <p>Plot 349 &amp; 350, Street 01, i-9/3 Islamabad<br>Capital Territory, 44000.</p>
-              <p><a href="tel:+92518356733">HR: +92 51 835-6733</a></p>
-              <p><a href="mailto:info@saufik.com">info@saufik.com</a></p>
             </div>
           </div>
           <div class="au-footer__cols">
@@ -1216,6 +1214,7 @@
                 <p class="au-footer__label">For General Queries</p>
                 <a href="mailto:accounts@thetechexcellence.com"
                   class="au-footer__link">accounts@thetechexcellence.com</a>
+                <a href="tel:+92518356733" class="au-footer__link">Ph: +92 51 835-6733</a>
               </div>
             </div>
             <div class="au-footer__col">
