--- a/product-detail.html
+++ b/product-detail.html
@@ -1492,6 +1492,24 @@
     });
   </script>
 
+  <!-- Back to Top -->
+  <button class="au-back-to-top" id="backToTop" aria-label="Back to top"
+    onclick="window.scrollTo({top:0,behavior:'smooth'})">
+    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+      stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+  </button>
+  <script>
+    (function () {
+      var btn = document.getElementById('backToTop');
+      if (!btn) return;
+      window.addEventListener('scroll', function () {
+        btn.classList.toggle('visible', window.scrollY > window.innerHeight);
+      });
+    })();
+  </script>
+
 </body>
 
 </html>
